==> chipglobe/Trust-x/efr32mg_SiLabs/pal_i2c.c <==
#include <trustx/optiga/include/optiga/pal/pal_i2c.h>
#include "sl_i2cspm_instances.h"
#define SEM_INIT_VALUE      1
#define SEM_MAX_VALUE       1
#define SEM_TAKE_SUCCESS    0

pal_status_t pal_i2c_init(const pal_i2c_t* p_i2c_context)
{
    i2c_ctx_t *current_ctx = p_i2c_context->p_i2c_hw_config;
    if(current_ctx->sl_i2cspm_sensor == NULL){
        return PAL_STATUS_FAILURE;
    }

    return PAL_STATUS_SUCCESS;
}

pal_status_t pal_i2c_write(pal_i2c_t *p_i2c_context, uint8_t *p_data,
                           uint16_t length)
{
    pal_status_t status;
    I2C_TransferSeq_TypeDef seq;
    app_event_handler_t upper_layer_handler =
            (app_event_handler_t)p_i2c_context->upper_layer_event_handler;


    if ((PAL_STATUS_SUCCESS == pal_i2c_acquire(p_i2c_context)) && (p_i2c_context != NULL)) {
        int i2c_result;
        seq.addr = (p_i2c_context->slave_address) << 1;
        /*if(length > 1){
            seq.flags = I2C_FLAG_WRITE_WRITE;
            seq.buf[0].len  = 1;
            seq.buf[0].data = p_data;
            seq.buf[1].len  = (uint8_t)(length-1);
            seq.buf[1].data = p_data++;
        } else if(length == 1){
            seq.flags = I2C_FLAG_WRITE;
            seq.buf[0].len  = 1;
            seq.buf[0].data = p_data;
            seq.buf[1].len  = 0;
        }*/
        seq.flags = I2C_FLAG_WRITE;
        seq.buf[0].len  = length;
        seq.buf[0].data = p_data;
        seq.buf[1].len  = 0;

        i2c_result = I2CSPM_Transfer(((i2c_ctx_t *)(p_i2c_context->p_i2c_hw_config))->sl_i2cspm_sensor, &seq);

        if (i2c_result == 0) {
            upper_layer_handler(p_i2c_context->upper_layer_ctx,
                                PAL_I2C_EVENT_SUCCESS);
            status = PAL_STATUS_SUCCESS;
        } else {
            upper_layer_handler(p_i2c_context->upper_layer_ctx,
                                PAL_I2C_EVENT_ERROR);
            status = PAL_STATUS_FAILURE;
        }

        pal_i2c_release((void *)p_i2c_context);
    } else {
        status = PAL_STATUS_I2C_BUSY;
        upper_layer_handler(p_i2c_context->upper_layer_ctx,
                            PAL_I2C_EVENT_BUSY);
    }

    return status;
}

pal_status_t pal_i2c_read(pal_i2c_t* p_i2c_context, uint8_t* p_data,
                          uint16_t length)
{
    pal_status_t status;
    app_event_handler_t upper_layer_handler =
            (app_event_handler_t)p_i2c_context->upper_layer_event_handler;


    if ((PAL_STATUS_SUCCESS == pal_i2c_acquire(p_i2c_context)) && (p_i2c_context != NULL)) {
        int result;
        I2C_TransferSeq_TypeDef seq;

        seq.addr = (p_i2c_context->slave_address) << 1;
        seq.flags = I2C_FLAG_READ;

        seq.buf[0].len  = length;
        seq.buf[0].data = p_data;
        seq.buf[1].len  = 0;

        result = I2CSPM_Transfer(((i2c_ctx_t *)(p_i2c_context->p_i2c_hw_config))->sl_i2cspm_sensor, &seq);

        /*for(int count = 1; count < length; count++){
            seq.buf[0].data = p_data++;
            result = I2CSPM_Transfer(((i2c_ctx_t *)(p_i2c_context->p_i2c_hw_config))->sl_i2cspm_sensor, &seq);
            if(result != 0)
              break;
        }*/

        if (result == 0) {
            upper_layer_handler(p_i2c_context->upper_layer_ctx,
                                PAL_I2C_EVENT_SUCCESS);
            status = PAL_STATUS_SUCCESS;
        } else {
            upper_layer_handler(p_i2c_context->upper_layer_ctx,
                                PAL_I2C_EVENT_ERROR);
            status = PAL_STATUS_FAILURE;
        }

        pal_i2c_release((void *)p_i2c_context);
    } else {
        status = PAL_STATUS_I2C_BUSY;
        upper_layer_handler(p_i2c_context->upper_layer_ctx,
                            PAL_I2C_EVENT_BUSY);
    }

    return status;
}
